...
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/buttonEquals"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="87dp"
        android:layout_height="87dp"
        android:layout_marginStart="4dp"
        android:backgroundTint="#80222121"
        android:text="="
...
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toTopOf="@+id/button7" />

    <EditText
        android:id="@+id/textMultiInput"
        android:layout_width="381dp"
        android:layout_height="190dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
...
